WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81686
[BlackBerry] Dijit crash WebCore::CookieManager::getRawCookies
https://bugs.webkit.org/show_bug.cgi?id=81686
Summary
[BlackBerry] Dijit crash WebCore::CookieManager::getRawCookies
Jacky Jiang
Reported
2012-03-20 11:32:14 PDT
PR 144565. Crash: lookup<WTF::IdentityHashTranslator<WTF::StringHash>, WTF::String> (key=..., this=0x7cf552c4) at /home/browsertest/dev/webkit/Source/JavaScriptCore/wtf/HashTable.h:498 498 unsigned h = HashTranslator::hash(key); (gdb) bt #0 lookup<WTF::IdentityHashTranslator<WTF::StringHash>, WTF::String> (key=..., this=0x7cf552c4) at /home/browsertest/dev/webkit/Source/JavaScriptCore/wtf/HashTable.h:498 #1 lookup (key=..., this=0x7cf552c4) at /home/browsertest/dev/webkit/Source/JavaScriptCore/wtf/HashTable.h:358 #2 get (key=..., this=0x7cf552c4) at /home/browsertest/dev/webkit/Source/JavaScriptCore/wtf/HashMap.h:359 #3 WebCore::CookieManager::getRawCookies (this=0x7cf552c0, stackOfCookies=..., requestURL=..., filter=WebCore::WithHttpOnlyCookies) at /home/browsertest/dev/webkit/Source/WebCore/platform/blackberry/CookieManager.cpp:269 #4 0x7dfaa0ca in WebCore::CookieManager::getCookie (this=0x7cf552c0, url=..., filter=WebCore::WithHttpOnlyCookies) at /home/browsertest/dev/webkit/Source/WebCore/platform/blackberry/CookieManager.cpp:202 #5 0x7daebd7e in WebCore::FrameLoaderClientBlackBerry::dispatchWillSendRequest (this=0x73b7f450, docLoader=0x7f5826e8, request=...) at /home/browsertest/dev/webkit/Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:973 #6 0x7dc9757c in WebCore::ResourceLoadNotifier::dispatchWillSendRequest (this=<optimized out>, loader=0x7f5826e8, identifier=1440, request=..., redirectResponse=...) at /home/browsertest/dev/webkit/Source/WebCore/loader/ResourceLoadNotifier.cpp:113 #7 0x7dc97eb2 in WebCore::ResourceLoadNotifier::willSendRequest (this=<optimized out>, loader=0x7799f120, clientRequest=..., redirectResponse=...) at /home/browsertest/dev/webkit/Source/WebCore/loader/ResourceLoadNotifier.cpp:64 #8 0x7dc9bae8 in WebCore::ResourceLoader::willSendRequest (this=0x7799f120, request=..., redirectResponse=...) at /home/browsertest/dev/webkit/Source/WebCore/loader/ResourceLoader.cpp:249 #9 0x7dc8966a in WebCore::MainResourceLoader::willSendRequest (this=0x7799f120, newRequest=..., redirectResponse=...) at /home/browsertest/dev/webkit/Source/WebCore/loader/MainResourceLoader.cpp:221 #10 0x7dc8b9cc in WebCore::MainResourceLoader::loadNow (this=0x7799f120, r=...) at /home/browsertest/dev/webkit/Source/WebCore/loader/MainResourceLoader.cpp:572 #11 0x7dc8c80e in WebCore::MainResourceLoader::load (this=0x7799f120, r=..., substituteData=<optimized out>) at /home/browsertest/dev/webkit/Source/WebCore/loader/MainResourceLoader.cpp:621 #12 0x7dc70ee0 in WebCore::DocumentLoader::startLoadingMainResource (this=0x7f5826e8, identifier=<optimized out>) at /home/browsertest/dev/webkit/Source/WebCore/loader/DocumentLoader.cpp:828 #13 0x7dc7bccc in WebCore::FrameLoader::continueLoadAfterWillSubmitForm (this=0x6ff8c0c0) at /home/browsertest/dev/webkit/Source/WebCore/loader/FrameLoader.cpp:2367 #14 0x7dc80b80 in WebCore::FrameLoader::continueLoadAfterNavigationPolicy (this=0x6ff8c0c0, formState=..., shouldContinue=<optimized out>) at /home/browsertest/dev/webkit/Source/WebCore/loader/FrameLoader.cpp:2969 #15 0x7dc80baa in WebCore::FrameLoader::callContinueLoadAfterNavigationPolicy (argument=<optimized out>, request=<optimized out>, formState=<optimized out>, shouldContinue=<optimized out>) at /home/browsertest/dev/webkit/Source/WebCore/loader/FrameLoader.cpp:2839 #16 0x7dc8f10a in WebCore::PolicyCallback::call (this=0x77cfeb00, shouldContinue=<optimized out>) at /home/browsertest/dev/webkit/Source/WebCore/loader/PolicyCallback.cpp:103 #17 0x7dc92c34 in WebCore::PolicyChecker::continueAfterNavigationPolicy (this=<optimized out>, policy=<optimized out>) at /home/browsertest/dev/webkit/Source/WebCore/loader/PolicyChecker.cpp:167 #18 0x7daecd9e in WebCore::FrameLoaderClientBlackBerry::dispatchDecidePolicyForNavigationAction (this=0x73b7f450, function= (void (WebCore::PolicyChecker::*)(WebCore::PolicyChecker * const, WebCore::PolicyAction)) 0x7dc92649 <WebCore::PolicyChecker::continueAfterNavigationPolicy(WebCore::PolicyAction)>, action=..., request=...) at /home/browsertest/dev/webkit/Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:230 #19 0x7dc9422c in WebCore::PolicyChecker::checkNavigationPolicy (this=0x6ff8c0c8, request=..., loader=<optimized out>, formState=<optimized out>, function=0x7dc80b95 <WebCore::FrameLoader::callContinueLoadAfterNavigationPolicy(void*, WebCore::ResourceRequest const&, WTF::PassRefPtr<WebCore::FormState>, bool)>, argument=0x6ff8c0c0) at /home/browsertest/dev/webkit/Source/WebCore/loader/PolicyChecker.cpp:89 #20 0x7dc8103c in WebCore::FrameLoader::loadWithDocumentLoader (this=0x6ff8c0c0, loader=0x7f5826e8, type=<optimized out>, prpFormState=<optimized out>) at /home/browsertest/dev/webkit/Source/WebCore/loader/FrameLoader.cpp:1424 #21 0x7dc8160e in WebCore::FrameLoader::loadWithNavigationAction (this=0x6ff8c0c0, request=..., action=..., lockHistory=<optimized out>, type=WebCore::FrameLoadTypeRedirectWithLockedBackForwardList, formState=...) at /home/browsertest/dev/webkit/Source/WebCore/loader/FrameLoader.cpp:1330 #22 0x7dc81cf2 in WebCore::FrameLoader::loadURL (this=0x6ff8c0c0, newURL=<optimized out>, referrer=<optimized out>, frameName=..., lockHistory=false, newLoadType=WebCore::FrameLoadTypeRedirectWithLockedBackForwardList, event=..., prpFormState=..., anchorText=...) at /home/browsertest/dev/webkit/Source/WebCore/loader/FrameLoader.cpp:1273 #23 0x7dc82e3e in WebCore::FrameLoader::loadURLIntoChildFrame (this=<optimized out>, url=..., referer=..., childFrame=0x6ff8c080) at /home/browsertest/dev/webkit/Source/WebCore/loader/FrameLoader.cpp:848 #24 0x7daeb900 in WebCore::FrameLoaderClientBlackBerry::createFrame (this=0x747e0020, url=..., name=..., ownerElement= 0x73ef3c88, referrer=..., allowsScrolling=true, marginWidth=-1, marginHeight=-1) at /home/browsertest/dev/webkit/Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:776 #25 0x7dc9dc42 in WebCore::SubframeLoader::loadSubframe (this=0x74bd7118, ownerElement=0x73ef3c88, url=<optimized out>, name=..., referrer=...) at /home/browsertest/dev/webkit/Source/WebCore/loader/SubframeLoader.cpp:281 #26 0x7dc9ddf4 in loadOrRedirectSubframe (frameName=<optimized out>, url=..., ownerElement=0x73ef3c88, this=0x74bd7118, lockHistory=<optimized out>, lockBackForwardList=<optimized out>) at /home/browsertest/dev/webkit/Source/WebCore/loader/SubframeLoader.cpp:254 #27 WebCore::SubframeLoader::loadOrRedirectSubframe (this=0x74bd7118, ownerElement=0x73ef3c88, url=..., frameName=<optimized out>, lockHistory=true, lockBackForwardList=true) at /home/browsertest/dev/webkit/Source/WebCore/loader/SubframeLoader.cpp:248 #28 0x7dc9e3f0 in WebCore::SubframeLoader::requestObject (this=0x74bd7118, ownerElement=<optimized out>, url=..., frameName=..., mimeType=..., paramNames=..., paramValues=...) at /home/browsertest/dev/webkit/Source/WebCore/loader/SubframeLoader.cpp:161 #29 0x7dc03c90 in updateWidget (pluginCreationOption=<optimized out>, this=0x73ef3c88) at /home/browsertest/dev/webkit/Source/WebCore/html/HTMLObjectElement.cpp:316 #30 WebCore::HTMLObjectElement::updateWidget (this=0x73ef3c88, pluginCreationOption=<optimized out>) at /home/browsertest/dev/webkit/Source/WebCore/html/HTMLObjectElement.cpp:277 #31 0x7dc06b8c in WebCore::HTMLPlugInImageElement::updateWidgetIfNecessary (this=0x73ef3c88) at /home/browsertest/dev/webkit/Source/WebCore/html/HTMLPlugInImageElement.cpp:191 #32 0x7db4f30c in WebCore::ContainerNode::dispatchPostAttachCallbacks () at /home/browsertest/dev/webkit/Source/WebCore/dom/ContainerNode.cpp:749 #33 0x7db4f3bc in WebCore::ContainerNode::resumePostAttachCallbacks (this=0x6fca9530) at /home/browsertest/dev/webkit/Source/WebCore/dom/ContainerNode.cpp:716 #34 0x7db5f106 in recalcStyle (change=<optimized out>, this=0x6fca9530) at /home/browsertest/dev/webkit/Source/WebCore/dom/Document.cpp:1642 #35 WebCore::Document::recalcStyle (this=0x6fca9530, change=<optimized out>) at /home/browsertest/dev/webkit/Source/WebCore/dom/Document.cpp:1566 #36 0x7db5f2d4 in WebCore::Document::updateStyleIfNeeded (this=0x6fca9530) at /home/browsertest/dev/webkit/Source/WebCore/dom/Document.cpp:1666 #37 0x7dcdf4b8 in WebCore::FrameView::updateLayoutAndStyleIfNeededRecursive (this=<optimized out>) at /home/browsertest/dev/webkit/Source/WebCore/page/FrameView.cpp:3160 #38 0x7dcdf542 in WebCore::FrameView::updateLayoutAndStyleIfNeededRecursive (this=0x7f0b88f0) at /home/browsertest/dev/webkit/Source/WebCore/page/FrameView.cpp:3173 #39 0x7dafc2b6 in BlackBerry::WebKit::RenderQueue::renderAllCurrentRegularRenderJobs (this=0x723da9c0) at /home/browsertest/dev/webkit/Source/WebKit/blackberry/WebKitSupport/RenderQueue.cpp:607 #40 0x7dab8f80 in BlackBerry::WebKit::BackingStorePrivate::willFireTimer (this=0x760e1490) at /home/browsertest/dev/webkit/Source/WebKit/blackberry/Api/BackingStore.cpp:536 #41 0x786b6580 in WebKitThread::willFireTimer (this=0x7b1dc020) at /home/browsertest/dev/libwebview/WebKitThread.cpp:1221 #42 0x789a2b02 in BlackBerry::Platform::GenericTimerClient::willFireTimer (this=<optimized out>) at /home/browsertest/dev/platform/blackberryplatform/GenericTimerClient.cpp:160 #43 0x7899b600 in fired (this=0x796b6830) at /home/browsertest/dev/platform/blackberryplatform/BlackBerryPlatformTimer.cpp:97 #44 BlackBerry::Platform::DefaultTimer::fired (this=0x796b6830) at /home/browsertest/dev/platform/blackberryplatform/BlackBerryPlatformTimer.cpp:89 #45 0x7899b434 in BlackBerry::Platform::timerFired (data=0x796b6830) at /home/browsertest/dev/platform/blackberryplatform/BlackBerryPlatformTimer.cpp:138 #46 0x789a2be4 in BlackBerry::Platform::GenericTimerClient::timerFired (this=0x796b19d8, func=0x7899b411 <BlackBerry::Platform::timerFired(void*)>, context=0x796b6830, timerId=2) at /home/browsertest/dev/platform/blackberryplatform/GenericTimerClient.cpp:185 #47 0x789a32c4 in BlackBerry::Platform::MethodDelegate4<void (BlackBerry::Platform::TimerCleaner::*)(BlackBerry::Platform::GuardedPointer<BlackBerry::Platform::GenericTimerClient>, void (*)(void*), void*, int), BlackBerry::Platform::TimerCleaner, BlackBerry::Platform::GuardedPointer<BlackBerry::Platform::GenericTimerClient>, void (*)(void*), void*, int>::execute ( this=0x712cb0a0) at /home/browsertest/dev/platform/blackberryplatform/BlackBerryPlatformMessageDelegate.h:873 #48 0x78981c94 in BlackBerry::Platform::ExecutableMessage::execute (this=<optimized out>) at /home/browsertest/dev/platform/blackberryplatform/BlackBerryPlatformExecutableMessage.cpp:38 #49 0x7898d510 in BlackBerry::Platform::MessageClient::executeMessage (this=0x7b1dc038, message=0x71ecaad0, returnCode=0) at /home/browsertest/dev/platform/blackberryplatform/BlackBerryPlatformMessageClient.cpp:631 #50 0x7898dec2 in BlackBerry::Platform::MessageClient::coalesceMessage (this=0x7b1dc038, message=0x71ecaad0, returnCode=0) at /home/browsertest/dev/platform/blackberryplatform/BlackBerryPlatformMessageClient.cpp:617 #51 0x7898df5e in BlackBerry::Platform::MessageClient::receivePendingMessage (this=0x7b1dc038, timeout=<optimized out>) at /home/browsertest/dev/platform/blackberryplatform/BlackBerryPlatformMessageClient.cpp:592 #52 0x7898df8c in processNextMessage (timeout=<optimized out>, this=0x7b1dc038) at /home/browsertest/dev/platform/blackberryplatform/BlackBerryPlatformMessageClient.cpp:518 #53 BlackBerry::Platform::MessageClient::processNextMessage (this=0x7b1dc038, timeout=<optimized out>) at /home/browsertest/dev/platform/blackberryplatform/BlackBerryPlatformMessageClient.cpp:509 #54 0x7898e0c0 in BlackBerry::Platform::MessageClient::exec (this=0x7b1dc038) at /home/browsertest/dev/platform/blackberryplatform/BlackBerryPlatformMessageClient.cpp:549 #55 0x786b61d6 in WebKitThread::exec (this=0x7b1dc020) at /home/browsertest/dev/libwebview/WebKitThread.cpp:135 #56 0x7898ac12 in BlackBerry::Platform::MessageClient::run (context=0x7b1dc038) at /home/browsertest/dev/platform/blackberryplatform/BlackBerryPlatformMessageClient.cpp:537 #57 0x0114fe90 in timer_settime (timerid=<optimized out>, flags=<optimized out>, value=<optimized out>, ovalue=0x0) at /builds/Trunk-Worldbuild/latest/svn/lib/c/1b/timer_settime.c:37 ASSERT: Program terminated with signal 11, Segmentation fault. #0 0x03ecb06c in WebCore::MainResourceLoader::willSendRequest (this=0x7fc14868, newRequest=..., redirectResponse=...) at /home/jacky/dev/webkit/Source/WebCore/loader/MainResourceLoader.cpp:182 182 ASSERT(!newRequest.isNull()); (gdb) bt #0 0x03ecb06c in WebCore::MainResourceLoader::willSendRequest (this=0x7fc14868, newRequest=..., redirectResponse=...) at /home/jacky/dev/webkit/Source/WebCore/loader/MainResourceLoader.cpp:182 #1 0x03ecd120 in WebCore::MainResourceLoader::loadNow (this=0x7fc14868, r=...) at /home/jacky/dev/webkit/Source/WebCore/loader/MainResourceLoader.cpp:572 #2 0x03ecd6d0 in WebCore::MainResourceLoader::load (this=0x7fc14868, r=..., substituteData=...) at /home/jacky/dev/webkit/Source/WebCore/loader/MainResourceLoader.cpp:621 #3 0x03e8d5d0 in WebCore::DocumentLoader::startLoadingMainResource (this=0x7e055300, identifier=382) at /home/jacky/dev/webkit/Source/WebCore/loader/DocumentLoader.cpp:828 #4 0x03eb2ae4 in WebCore::FrameLoader::continueLoadAfterWillSubmitForm (this=0x37461a98) at /home/jacky/dev/webkit/Source/WebCore/loader/FrameLoader.cpp:2367 #5 0x03eb5a88 in WebCore::FrameLoader::continueLoadAfterNavigationPolicy (this=0x37461a98, formState=..., shouldContinue=true) at /home/jacky/dev/webkit/Source/WebCore/loader/FrameLoader.cpp:2969 #6 0x03eb503c in WebCore::FrameLoader::callContinueLoadAfterNavigationPolicy (argument=0x37461a98, request=..., formState=..., shouldContinue=true) at /home/jacky/dev/webkit/Source/WebCore/loader/FrameLoader.cpp:2839 #7 0x03ed1748 in WebCore::PolicyCallback::call (this=0x77df5ad0, shouldContinue=true) at /home/jacky/dev/webkit/Source/WebCore/loader/PolicyCallback.cpp:103 #8 0x03ed270c in WebCore::PolicyChecker::continueAfterNavigationPolicy (this=0x37461aa0, policy=WebCore::PolicyUse) at /home/jacky/dev/webkit/Source/WebCore/loader/PolicyChecker.cpp:167 #9 0x7a9b5108 in WebCore::FrameLoaderClientBlackBerry::dispatchDecidePolicyForNavigationAction (this=0x7f9d2260, function= (void (WebCore::PolicyChecker::*)(WebCore::PolicyChecker * const, WebCore::PolicyAction)) 0x3ed24bc <WebCore::PolicyChecker::continueAfterNavigationPolicy(WebCore::PolicyAction)>, action=..., request=...) at /home/jacky/dev/webkit/Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:232 #10 0x03ed2090 in WebCore::PolicyChecker::checkNavigationPolicy (this=0x37461aa0, request=..., loader=0x7e055300, formState=..., function=0x3eb4ff4 <WebCore::FrameLoader::callContinueLoadAfterNavigationPolicy(void*, WebCore::ResourceRequest const&, WTF::PassRefPtr<WebCore::FormState>, bool)>, argument=0x37461a98) at /home/jacky/dev/webkit/Source/WebCore/loader/PolicyChecker.cpp:89 #11 0x03eae0c8 in WebCore::FrameLoader::loadWithDocumentLoader (this=0x37461a98, loader=0x7e055300, type=WebCore::FrameLoadTypeRedirectWithLockedBackForwardList, prpFormState=...) at /home/jacky/dev/webkit/Source/WebCore/loader/FrameLoader.cpp:1424 #12 0x03ead940 in WebCore::FrameLoader::loadWithNavigationAction (this=0x37461a98, request=..., action=..., lockHistory=false, type=WebCore::FrameLoadTypeRedirectWithLockedBackForwardList, formState=...) at /home/jacky/dev/webkit/Source/WebCore/loader/FrameLoader.cpp:1330 #13 0x03ead244 in WebCore::FrameLoader::loadURL (this=0x37461a98, newURL=..., referrer=..., frameName=..., lockHistory=false, newLoadType=WebCore::FrameLoadTypeRedirectWithLockedBackForwardList, event=..., prpFormState=..., anchorText=...) at /home/jacky/dev/webkit/Source/WebCore/loader/FrameLoader.cpp:1273 #14 0x03eaafa0 in WebCore::FrameLoader::loadURLIntoChildFrame (this=0x7f147b88, url=..., referer=..., childFrame=0x37461a38) at /home/jacky/dev/webkit/Source/WebCore/loader/FrameLoader.cpp:848 #15 0x7a9b881c in WebCore::FrameLoaderClientBlackBerry::createFrame (this=0x7ef2dfa0, url=..., name=..., ownerElement=0x77c59f30, referrer=..., allowsScrolling=true, marginWidth=-1, marginHeight=-1) at /home/jacky/dev/webkit/Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:778 #16 0x03ee6d8c in WebCore::SubframeLoader::loadSubframe (this=0x7f147d60, ownerElement=0x77c59f30, url=..., name=..., referrer=...) at /home/jacky/dev/webkit/Source/WebCore/loader/SubframeLoader.cpp:281 #17 0x03ee6b14 in WebCore::SubframeLoader::loadOrRedirectSubframe (this=0x7f147d60, ownerElement=0x77c59f30, url=..., frameName=..., lockHistory=true, lockBackForwardList=true) at /home/jacky/dev/webkit/Source/WebCore/loader/SubframeLoader.cpp:254 #18 0x03ee6528 in WebCore::SubframeLoader::requestObject (this=0x7f147d60, ownerElement=0x77c59f30, url=..., frameName=..., mimeType=..., paramNames=..., paramValues=...) at /home/jacky/dev/webkit/Source/WebCore/loader/SubframeLoader.cpp:161 #19 0x03cc3414 in WebCore::HTMLObjectElement::updateWidget (this=0x77c59f30, pluginCreationOption=WebCore::CreateOnlyNonNetscapePlugins) at /home/jacky/dev/webkit/Source/WebCore/html/HTMLObjectElement.cpp:316 #20 0x03ccd620 in WebCore::HTMLPlugInImageElement::updateWidgetIfNecessary (this=0x77c59f30) at /home/jacky/dev/webkit/Source/WebCore/html/HTMLPlugInImageElement.cpp:191 #21 0x03ccd988 in WebCore::HTMLPlugInImageElement::updateWidgetCallback (n=0x77c59f30) at /home/jacky/dev/webkit/Source/WebCore/html/HTMLPlugInImageElement.cpp:251 #22 0x03a21fc8 in WebCore::ContainerNode::dispatchPostAttachCallbacks () at /home/jacky/dev/webkit/Source/WebCore/dom/ContainerNode.cpp:749 #23 0x03a21d64 in WebCore::ContainerNode::resumePostAttachCallbacks (this=0x7f976f60) at /home/jacky/dev/webkit/Source/WebCore/dom/ContainerNode.cpp:716 #24 0x03a413cc in WebCore::Document::recalcStyle (this=0x7f976f60, change=WebCore::Node::NoChange) at /home/jacky/dev/webkit/Source/WebCore/dom/Document.cpp:1642 #25 0x03a41544 in WebCore::Document::updateStyleIfNeeded (this=0x7f976f60) at /home/jacky/dev/webkit/Source/WebCore/dom/Document.cpp:1666 #26 0x03a417a4 in WebCore::Document::updateLayout (this=0x7f976f60) at /home/jacky/dev/webkit/Source/WebCore/dom/Document.cpp:1693 #27 0x042adb10 in WebCore::RenderLayer::hitTest (this=0x7d79e0b0, request=..., result=...) at /home/jacky/dev/webkit/Source/WebCore/rendering/RenderLayer.cpp:3155 #28 0x03fa2594 in WebCore::EventHandler::hitTestResultAtPoint (this=0x7f279268, point=..., allowShadowContent=false, ignoreClipping=false, testScrollbars=WebCore::DontHitTestScrollbars, hitType=144, padding=...) at /home/jacky/dev/webkit/Source/WebCore/page/EventHandler.cpp:1063 #29 0x03faade8 in WebCore::EventHandler::handleTouchEvent (this=0x7f279268, event=...) at /home/jacky/dev/webkit/Source/WebCore/page/EventHandler.cpp:3458 #30 0x7a951ae4 in BlackBerry::WebKit::WebPage::touchEvent (this=0x7d2b36c8, event=...) at /home/jacky/dev/webkit/Source/WebKit/blackberry/Api/WebPage.cpp:3641 #31 0x7aca8c94 in TouchHandlerWebKitThread::onTouchEvent (this=0x7d2b1f18, event=..., permissions=...) at /home/jacky/dev/libwebview/TouchHandlerWebKitThread.cpp:134 #32 0x7acd51bc in BlackBerry::Platform::MethodDelegate2<void (TouchHandlerWebKitThread::*)(BlackBerry::Platform::TouchEvent const&, TouchPermissions const&), TouchHandlerWebKitThread, BlackBerry::Platform::TouchEvent, TouchPermissions>::execute (this=0x72127290) at /home/jacky/dev/staging/usr/include/browser/platform/BlackBerryPlatformMessageDelegate.h:821 #33 0x7a2aa008 in BlackBerry::Platform::ExecutableMessage::execute (this=0x64abb600) at /home/jacky/dev/platform/blackberryplatform/BlackBerryPlatformExecutableMessage.cpp:38 #34 0x7a2c286c in BlackBerry::Platform::MessageClient::executeMessage (this=0x7a6e6be8, message=0x64abb600, returnCode=0) at /home/jacky/dev/platform/blackberryplatform/BlackBerryPlatformMessageClient.cpp:631 #35 0x7a2c2798 in BlackBerry::Platform::MessageClient::coalesceMessage (this=0x7a6e6be8, message=0x64abb600, returnCode=0) at /home/jacky/dev/platform/blackberryplatform/BlackBerryPlatformMessageClient.cpp:617 #36 0x7a2c264c in BlackBerry::Platform::MessageClient::receivePendingMessage (this=0x7a6e6be8, timeout=0) at /home/jacky/dev/platform/blackberryplatform/BlackBerryPlatformMessageClient.cpp:592 #37 0x7a2c22bc in BlackBerry::Platform::MessageClient::processNextMessage (this=0x7a6e6be8, timeout=2147483647) at /home/jacky/dev/platform/blackberryplatform/BlackBerryPlatformMessageClient.cpp:518 #38 0x7a2c2448 in BlackBerry::Platform::MessageClient::exec (this=0x7a6e6be8) at /home/jacky/dev/platform/blackberryplatform/BlackBerryPlatformMessageClient.cpp:549 #39 0x7acbd75c in WebKitThread::exec (this=0x7a6e6bd0) at /home/jacky/dev/libwebview/WebKitThread.cpp:135 #40 0x7a2c23d8 in BlackBerry::Platform::MessageClient::run (context=0x7a6e6be8) at /home/jacky/dev/platform/blackberryplatform/BlackBerryPlatformMessageClient.cpp:537 #41 0x014ffe80 in timer_settime (timerid=<optimized out>, flags=<optimized out>, value=<optimized out>, ovalue=0x0) at /builds/Trunk-Worldbuild/latest/svn/lib/c/1b/timer_settime.c:37 #42 0x00000000 in ?? () (gdb)
Attachments
Patch
(6.76 KB, patch)
2012-03-20 12:12 PDT
,
Jacky Jiang
no flags
Details
Formatted Diff
Diff
Patch
(6.77 KB, patch)
2012-03-20 12:23 PDT
,
Jacky Jiang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2012-03-20 12:12:06 PDT
Created
attachment 132874
[details]
Patch Has been reviewed internally by Joe Mason.
Rob Buis
Comment 2
2012-03-20 12:15:52 PDT
Comment on
attachment 132874
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=132874&action=review
Looks good, but please fix the typos first.
> Source/WebCore/ChangeLog:8 > + HTML plugin element with an empty src caused an ASSEER failure on debug
ASSEER -> ASSERT.
> Source/WebKit/blackberry/ChangeLog:8 > + When decide policy for navigation action, if the url of the request
When decide -> "When deciding the"
Jacky Jiang
Comment 3
2012-03-20 12:16:59 PDT
(In reply to
comment #2
)
> (From update of
attachment 132874
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=132874&action=review
> > Looks good, but please fix the typos first. > > > Source/WebCore/ChangeLog:8 > > + HTML plugin element with an empty src caused an ASSEER failure on debug > > ASSEER -> ASSERT. > > > Source/WebKit/blackberry/ChangeLog:8 > > + When decide policy for navigation action, if the url of the request > > When decide -> "When deciding the"
Sure, thanks for catching them.
Jacky Jiang
Comment 4
2012-03-20 12:23:58 PDT
Created
attachment 132876
[details]
Patch Fixed the typos.
Rob Buis
Comment 5
2012-03-20 12:27:30 PDT
Comment on
attachment 132876
[details]
Patch Looks good.
WebKit Review Bot
Comment 6
2012-03-20 13:56:56 PDT
Comment on
attachment 132876
[details]
Patch Clearing flags on attachment: 132876 Committed
r111434
: <
http://trac.webkit.org/changeset/111434
>
WebKit Review Bot
Comment 7
2012-03-20 13:57:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug