[BlackBerry] Dijit crash WebCore::CookieManager::getRawCookies https://bugs.webkit.org/show_bug.cgi?id=81686

Patch by Jacky Jiang <zhajiang@rim.com> on 2012-03-20
Reviewed by Rob Buis.

Source/WebCore:

HTML plugin element with an empty src caused an ASSERT failure on debug
build and a crash on release build.
When getting cookie, url can be null, so we need to check for it to
avoid the crash.

No new tests as this is covered by
LayoutTests/fast/loader/empty-embed-src-attribute.html.

* platform/network/blackberry/ResourceRequestBlackBerry.cpp:
(WebCore::ResourceRequest::initializePlatformRequest):

Source/WebKit/blackberry:

When deciding the policy for navigation action, if the url of the
request is null, ignore it to avoid the ASSERT failure in
MainResourceLoader::willSendRequest.

* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::dispatchDecidePolicyForNavigationAction):

Canonical link: https://commits.webkit.org/98949@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111434 268f45cc-cd09-0410-ab3c-d52691b4dbfc